--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -5,7 +5,6 @@
 click
 Sphinx
 coverage
-awscli
 flake8
 python-dotenv>=0.5.1
 {% if cookiecutter.python_interpreter != 'python3' %}
@@ -13,3 +12,21 @@ python-dotenv>=0.5.1
 # backwards compatibility
 pathlib2
 {% endif %}
+
+# eda packages
+sweetviz
+missingno
+
+# plotting packages
+plotly
+matplotlib
+
+# data handling
+pandas
+pyarrow
+fastparquet
+
+# machine learning packages
+numpy
+scikit-learn
+statsmodels
