--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -25,8 +25,11 @@ plotly==5.20.0
 seaborn==0.13.2
 
 # data handling
-fastparquet
+openpyxl==3.1.2
 pandas==2.2.2
+
+# parquette
+fastparquet
 pyarrow
 
 # machine learning packages
@@ -36,11 +39,21 @@ numpy==1.26.4
 optuna==3.6.1
 scikit-learn==1.4.2
 scipy==1.13.0
-statsmodels
-
-# other
-click==8.1.7
+sktime==0.29.0
+statsmodels==0.14.2
 
 # jupyter
 ipykernel==6.29.4
 ipython==8.23.0
+ipywidgets==8.1.2
+
+# other
+click==8.1.7
+requests==2.31.0
+urllib3==2.2.1
+
+# jupyter
+ipykernel==6.29.4
+ipython==8.23.0
+nbformat==5.10.4
+tqdm==4.66.4
