--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -2,7 +2,6 @@
 -e .
 
 # external requirements
-click
 Sphinx
 coverage
 flake8
@@ -14,32 +13,33 @@ pathlib2
 {% endif %}
 
 # eda packages
-missingno==0.5.2
-sweetviz==2.3.1
-
+# missingno==0.5.2
+# sweetviz==2.3.1
 
 # plotting packages
 matplotlib==3.8.4
 matplotlib-inline==0.1.6
 plotly==5.20.0
 seaborn==0.13.2
+dash==2.16.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 
 # data handling
+fastparquet
 openpyxl==3.1.2
 pandas==2.2.2
-
-# parquette
-fastparquet
 pyarrow
 
 # machine learning packages
-lime==0.2.0.1
+# lime==0.2.0.1
 mlflow==2.11.3
 numpy==1.26.4
-optuna==3.6.1
+# optuna==3.6.1
 scikit-learn==1.4.2
 scipy==1.13.0
-sktime==0.29.0
+# sktime==0.29.0
 statsmodels==0.14.2
 
 # jupyter
@@ -47,13 +47,40 @@ ipykernel==6.29.4
 ipython==8.23.0
 ipywidgets==8.1.2
 
-# other
+# web
+certifi==2022.9.24
 click==8.1.7
+pyOpenSSL==23.0.0
 requests==2.31.0
+# streamlit==1.34.0
 urllib3==2.2.1
 
 # jupyter
 ipykernel==6.29.4
 ipython==8.23.0
+ipywidgets==8.1.2
 nbformat==5.10.4
 tqdm==4.66.4
+
+# # reinforcement learning
+# mabwiser==2.7.3
+
+# # deep learning
+# tensorflow==2.11.0
+# tensorflow_intel==2.11.0
+# torch==1.13.1
+
+# # hugging face
+# transformers==4.25.1
+
+## NLP
+# nltk==3.8.1
+# textblob==0.17.1
+# textblob_de==0.4.3
+# spacy==3.5.0
+
+
+
+
+
+
