--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -38,7 +38,7 @@ mlflow==2.11.3
 numpy==1.26.4
 # optuna==3.6.1
 scikit-learn==1.4.2
-scipy==1.13.0
+scipy==1.12.0 # lates supported by gensim
 # sktime==0.29.0
 statsmodels==0.14.2
 
@@ -78,6 +78,7 @@ tqdm==4.66.4
 # textblob==0.17.1
 # textblob_de==0.4.3
 # spacy==3.5.0
+# gensim==4.3.2
 
 
 
