--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -12,42 +12,43 @@ python-dotenv>=0.5.1
 pathlib2
 {% endif %}
 
-# eda packages
+
+# EDA
 # missingno==0.5.2
 # sweetviz==2.3.1
 
-# plotting packages
-matplotlib==3.8.4
-matplotlib-inline==0.1.6
-plotly==5.20.0
-seaborn==0.13.2
+# PLOTTING
 dash==2.16.1
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+matplotlib==3.8.4
+matplotlib-inline==0.1.6
+plotly==5.20.0
+pyLDAvis==3.4.1
+seaborn==0.13.2
+topic-wizard==1.0.2
 
-# data handling
+
+# DATA HANDLING
 fastparquet
 openpyxl==3.1.2
 pandas==2.2.2
 pyarrow
 
-# machine learning packages
+# MACHINE LEARNING
 # lime==0.2.0.1
 mlflow==2.11.3
 numpy==1.26.4
 # optuna==3.6.1
 scikit-learn==1.4.2
 scipy==1.12.0 # lates supported by gensim
-# sktime==0.29.0
 statsmodels==0.14.2
 
-# jupyter
-ipykernel==6.29.4
-ipython==8.23.0
-ipywidgets==8.1.2
+# # TIME SERIES
+# sktime==0.29.0
 
-# web
+# WEB
 certifi==2022.9.24
 click==8.1.7
 pyOpenSSL==23.0.0
@@ -55,33 +56,29 @@ requests==2.31.0
 # streamlit==1.34.0
 urllib3==2.2.1
 
-# jupyter
+# JUPYTHER
 ipykernel==6.29.4
 ipython==8.23.0
 ipywidgets==8.1.2
 nbformat==5.10.4
 tqdm==4.66.4
 
-# # reinforcement learning
+# # REINFORCEMENT LEARNING
 # mabwiser==2.7.3
 
-# # deep learning
+# # DEEP LEARNING
 # tensorflow==2.11.0
 # tensorflow_intel==2.11.0
 # torch==1.13.1
 
-# # hugging face
+# # HUGGING FACE
 # transformers==4.25.1
 
-## NLP
+# # NLP
+# gensim==4.3.2
 # nltk==3.8.1
+# spacy==3.7.4
+# spacy-legacy==3.0.12
+# spacy-loggers==1.0.5
 # textblob==0.17.1
 # textblob_de==0.4.3
-# spacy==3.5.0
-# gensim==4.3.2
-
-
-
-
-
-
