--- a/{{ cookiecutter.repo_name }}/.env
+++ b/{{ cookiecutter.repo_name }}/.env
@@ -10,3 +10,19 @@
 #   ----------------------------------------------------------------
 #
 # DO NOT ADD THIS FILE TO VERSION CONTROL!
+
+# data
+EXTERNAL_DATA_DIR = "/data/external"
+INTERIM_DATA_DIR = "/data/interim"
+PROCESSED_DATA_DIR = "/data/processed"
+RAW_DATA_DIR = "/data/raw"
+
+# reports
+REPORT_DIR = "/reports"
+FIGURES_DIR = "/reports/figures"
+
+# models
+MODELS_DIR = "/models"
+
+# other
+SEED = 42
